--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "engines": {
+    "node": "22.20.0"
+  },
   "name": "newtechdine",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +32,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "path": "^0.12.7",
     "router": "^2.2.0"
   }
 }
